--- a/API Meteo/index.html
+++ b/API Meteo/index.html
@@ -6,7 +6,36 @@
     <link href="/dist/output.css" rel="stylesheet">
     <title>Meteo</title>
 </head>
-<body class=" bg-[#bde0fe] flex justify-center items-center h-[100vh] w-[100vw]">
-    <div class="h-[80%] w-[80%] bg-[#cdb4db] rounded-[10px] " id="conteneur"></div>
+<body class=" bg-[#fdfeff] flex justify-center items-center h-[100vh] w-[100vw]">
+    <div class="h-[80%] w-[70%] bg-gradient-to-tr from-[#ff66d8] to-[#92dce5] rounded-[10px] " id="conteneur">
+        <div class="h-[16%] w-[100%] flex justify-center items-center border-b-[2px] border-b-[#fff]"><p class="text-[30px]">Appli Météo </p></div>
+        <div class="h-[50%] w-[100%] grid grid-cols-[1fr,2fr] border-b-[2px] border-b-[#fff]">
+            <div class="h-[100%] w-[100%] flex justify-center items-center"><img src="assets/images/8.svg" alt="" class="h-[50%] w-[70%]"></div>
+            <div class="flex flex-col justify-center items-start">
+                <h1 class="text-[48px] colors-[#fff]">Temps</h1>
+                <h1 class="text-[48px]">Temperature</h1>
+                <h2 class="text-[40px]">Localisation Ville</h2>
+            </div>
+        </div>
+        <div class="h-[17%] w-[100%] grid grid-cols-7  border-b-[2px] border-b-[#fff]">
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class=""></div>
+        </div>
+        <div class="h-[17%] w-[100%] grid grid-cols-7  ">
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class="border-r-[1px] border-r-[#fff]"></div>
+            <div class=""></div>
+        </div>
+    </div>
+    <script src="assets/main.js"></script>
 </body>
 </html>
