--- a/C/app.html
+++ b/C/app.html
@@ -9,79 +9,146 @@
 <body>
     <div class="conteneurnav">
         <button class="newdemande">Nouvelle demande</button>
-        <a href="#" class="profil">
+        <a href="#" class="profil" id="modif-p">
             <img src="images/US.png" alt="">
             <p class="nomuser">User</p>
         </a>
     </div>
-    <div class="conteneurdemande">
-          <div class="selectchek">
-            <div class="radio1">
-                <input type="radio" id="nat" name="drone" value=""  />
-                <label for="nat" class="btnr">National</label>
-            </div>
-              <div>
-                <input type="radio" id="huey" name="drone" value="huey" />
-                <label for="huey" class="btnr">International</label>
+    <div class="Conteneurg">
+        <div class="conteneurdemande">
+            <div class="selectchek">
+              <div class="radio1">
+                  <input type="radio" id="nat" name="drone" value=""  />
+                  <label for="nat" class="btnr">National</label>
               </div>
-          </div>
-          <div class="combopays">
-            <select name="" id="" class="combopayschild"><option value="">... Seletionner un pays </option></select>
-          </div>
-          <div class="inputinfo">
-            <div class="dvpasss">
-                <label for="">Départ</label>
-                <input type="text" name="" id="" placeholder="Ville de départ">
+                <div>
+                  <input type="radio" id="huey" name="drone" value="huey" />
+                  <label for="huey" class="btnr">International</label>
+                </div>
             </div>
-            <div class="dvpasss">
-                <label for="">Départ</label>
-                <input type="date" name="" id="">
+            <div class="combopays">
+              <label for="">Pays</label>
+              <select name="" id="" class="combopayschild"><option value="">... Seletionner un pays </option></select>
             </div>
-            <div class="dvpasss">
-                <label for="">Retour</label>
-                <input type="text" name="" id="" placeholder="Ville de retour">
+            <div class="inputinfo">
+              <div class="depart">
+                  <div class="dvpasss">
+                      <label for="">Départ</label>
+                      <input type="text" name="" id="" placeholder="Ville de départ">
+                  </div>
+                  <div class="dvpasss">
+                      <label for="">Départ</label>
+                      <input type="date" name="" id="">
+                  </div>
+              </div>
+              <div class="depart">
+                  <div class="dvpasss">
+                      <label for="">Retour</label>
+                      <input type="text" name="" id="" placeholder="Ville de retour">
+                  </div>
+                  <div class="dvpasss">
+                      <label for="">Retour</label>
+                      <input type="date" name="" id="">
+                  </div>
+              </div>
             </div>
-            <div class="dvpasss">
-                <label for="">Retour</label>
-                <input type="date" name="" id="">
+            <div class="inputautres">
+              <div class="mission">
+                  <label for="">Obs.</label>
+                  <textarea name="" id="" ></textarea>
+              </div>
+              <button class="newdemande">Envoyer</button>
             </div>
-          </div>
-          <div class="inputautres">
-            <div class="mission">
-                <label for="">Mission</label>
-                <textarea name="" id="" ></textarea>
+      </div>
+      <div class="profilinfo">
+        <div class="contentinfoprofil">
+            <label for="" class="Dir">Direction :</label>
+            <label for="">Nom :</label>
+            <label for="">Prénom :</label>
+            <label for="">N° Passport :</label>
+            <div class="validp">
+                <label for="">Valide du :</label>
+                <label for="">Au :</label>
             </div>
-            <div class="mission">
-                <label for="">Observation</label>
-                <textarea name="" id="" ></textarea>
-            </div>
-
-          </div>
+            <label for="">N° Tel :</label>
+        </div>
+        <div class="nbrdemande">
+             <h1 class="nbrenv">03</h1>
+             <h1>Envois/An</h1>
+             <p>E-MAIL: com.admin@anesrif.dz <br>Chargé de la réservation :0660-66-66-66 <br> Plus d'information contactez : 0566-66-66-66 </p>
+        </div>
+      </div>
     </div>
     <div class="conteneurtable">
         <table class="tbhistoriqueb">
             <thead>
                 <tr>
-                    <th scope="col">Déstination</th>
-                    <th scope="col">Départ de.</th>
-                    <th scope="col">Date de départ</th>
-                    <th scope="col">Retour de.</th>
-                    <th scope="col">Date de retour</th>
-                    <th scope="col">Observation</th>
+                    <th>Déstination</th>
+                    <th>Départ de.</th>
+                    <th>Date de départ</th>
+                    <th>Retour de.</th>
+                    <th>Date de retour</th>
+                    <th>Observation</th>
                   </tr>
             </thead>
-            <tr>
-                <th scope="row">The Lion King (2019 remake)</th>
-                <td data-title="Released">2019</td>
-                <td data-title="Studio">Disney</td>
-                <td data-title="Worldwide Gross" data-type="currency">$1,657,870,986</td>
-                <td data-title="Domestic Gross" data-type="currency">$543,638,043</td>
-                <td data-title="International Gross" data-type="currency">$1,114,232,943</td>
-              </tr>
             <tbody>
-
+                <tr>
+                <td >The Lion King (2019 remake)</td>
+                <td >2019</td>
+                <td >Disney</td>
+                <td >$1,657,870,986</td>
+                <td >$543,638,043</td>
+                <td >$1,114,232,943</td>
+              </tr>
+              <tr>
+                <td >The Lion King (2019 remake)</td>
+                <td >2019</td>
+                <td >Disney</td>
+                <td >$1,657,870,986</td>
+                <td >$543,638,043</td>
+                <td >$1,114,232,943</td>
+              </tr>
+              <tr>
+                <td >The Lion King (2019 remake)</td>
+                <td >2019</td>
+                <td >Disney</td>
+                <td >$1,657,870,986</td>
+                <td >$543,638,043</td>
+                <td >$1,114,232,943</td>
+              </tr>
+             
             </tbody>
         </table>
+        <div class="modif-user" id="pop-up">
+          <div class="close" id="closepop"><img src="images/close.png" alt=""></div>
+          <div class="conteneurlogin">
+            <div class="dvpasss1">
+              <label for="">Direction :</label>
+              <select name="" id=""></select>
+           </div>
+            <div class="dvpasss1">
+                <label for="">N° Passeport :</label>
+                <input type="text" name="" id="" placeholder="N° Passeport">
+            </div>
+            <div class="validite-pass">
+              <div class="dvpasss12">
+                <label for="">Valide du :</label>
+                  <input type="date" name="" id="" placeholder="">
+              </div>
+              <div class="dvpasss12">
+                <label for="">Au :</label>
+                  <input type="date" name="" id="" placeholder="">
+              </div>
+            </div>
+            <div class="dvpasss1">
+              <label for="">Télephone :</label>
+                <input type="text" name="" id="" placeholder="N° Telephone">
+            </div>
+        </div>
+          <button type="submit" class="enregistrer">Enregistrer</button>
+        </div>
+        <div class="overl" id="overly"></div>
+        <script src="main.js"></script>
     </div>
 
 </body>
