--- a/sectionUNJA/index.html
+++ b/sectionUNJA/index.html
@@ -27,8 +27,9 @@
         </div>
     </div>
     <div class="cntnt-btn">
-        <button class="btnsavoirplus" id="sentinel">Projet Sentinel lire plus..</button>
+        <button class="btnsavoirplus" id="sentinel" url="">Projet Sentinel lire plus..</button>
         <button class="btnsavoirplus" id="ecotricol">ÉcoTri-Collecte lire plus..</button>
+        <button class="btnsavoirplus"><a href="Liste des participants.pdf">ÉcoTri-Collecte lire plus..</a></button>
     </div>
     </section>
     <script src="main.js"></script>
