--- a/C/app.html
+++ b/C/app.html
@@ -28,7 +28,9 @@
             </div>
             <div class="combopays">
               <label for="">Pays</label>
-              <select name="" id="" class="combopayschild"><option value="">... Seletionner un pays </option></select>
+              <select name="" id="" class="combopayschild"><option value="">... Seletionner un pays </option>
+              
+              </select>
             </div>
             <div class="inputinfo">
               <div class="depart">
@@ -116,7 +118,6 @@
                 <td >$543,638,043</td>
                 <td >$1,114,232,943</td>
               </tr>
-             
             </tbody>
         </table>
         <div class="modif-user" id="pop-up">
@@ -124,7 +125,10 @@
           <div class="conteneurlogin">
             <div class="dvpasss1">
               <label for="">Direction :</label>
-              <select name="" id=""></select>
+              <select name="" id="">
+                <option value="01">.dir1 </option>
+                <option value="02"> dir2</option>
+              </select>
            </div>
             <div class="dvpasss1">
                 <label for="">N° Passeport :</label>
@@ -144,7 +148,7 @@
               <label for="">Télephone :</label>
                 <input type="text" name="" id="" placeholder="N° Telephone">
             </div>
-        </div>
+            </div>
           <button type="submit" class="enregistrer">Enregistrer</button>
         </div>
         <div class="overl" id="overly"></div>
