--- a/Quiz js/index.html
+++ b/Quiz js/index.html
@@ -175,7 +175,11 @@
             </div>
         </form> 
         </div>
-       
+       <div class="fenpopOP">
+        <div class="FEN">
+            <div class=""></div>
+        </div>
+       </div>
 
 <script src="script.js"></script>
 </body>
