--- a/C/consultation.html
+++ b/C/consultation.html
@@ -12,7 +12,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Demande</th>
+                        <th>Demandeur</th>
                         <th>Direction</th>
                         <th>Date réception</th>
                     </tr>
